SERVER-35376 move prepareTransaction logic to session